--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"client": "cd client && npm run start",
 		"backend": "cd server && npm run server",
-		"start": "concurrently \"npm run backend\"  \"npm run client\""
+		"start": "npm run client"
 	},
 	"author": "FrontEnd/Backend/SmartContracts -John Cramer",
 	"license": "ISC",
